<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xiaoxisetting">评论消息提醒</string>
    <string name="app_name">ThinkSNS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit">编辑</string>
    <string name="del">删除</string>
    <string name="add">添加新账户</string>
    <string name="login_label_username">用户名</string>
    <string name="login_username_hint">输入用户名</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_password">密\t码:</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_registration">注册</string>
    <string name="registration_label_email">登录邮箱：</string>
    <string name="registration_label_password">登录密码：</string>
    <string name="registration_label_password2">确认密码：</string>
     <string name="registration_label_name">昵称：</string>
      <string name="registration_label_sex">性别：</string>
    <string name="login_label_registration_cancel">取消</string>
    <string name="login_name_hint">输入昵称</string>
    <string name="login_password2_hint">确认密码</string>
    <string name="sign_up_topname">签到</string>
    
    <string name="login_register_link">欢迎登录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="zhuanfashu">转发数:</string>
    <string name="pinglunshu">评论数:</string>
    <string name="number">1234</string>
    <!-- settings -->
    <string name="homeblog_allnews">所有动态</string>
    <string name="homeblog_icare">我的关注</string>
    <string name="homeblog_myblog">我的微博</string>
    <string name="homeblog_friends">朋友圈</string>
    <string name="homeblog_listitem_resend">转发</string>
    <string name="homeblog_listitem_good">赞</string>
    <string name="homeblog_listitem_comment">评论</string>
    <string name="homeblog_listitem_collection">收藏</string>
    <string name="homeblog_settint">设置</string>
    <string name="homeblog_settint_account">账号管理</string>
    <string name="homeblog_settint_inform">通知和提醒</string>
    <string name="homeblog_settint_safe">隐私与安全</string>
    <string name="homeblog_settint_general">通用设置</string>
    <string name="homeblog_settint_advice">意见反馈</string>
    <string name="homeblog_settint_about">关于软件</string>
    <string name="homeblog_settint_exit">退出当前账号</string>
    <string name="setting_general">通用设置</string>
    <string name="setting_voice">声音与振动</string>
    <string name="setting_voice_voice">声音</string>
    <string name="setting_voice_infovoice">消息提示音</string>
    <string name="setting_voice_others">其他声音</string>
    <string name="setting_voice_vabiration">振动提醒</string>
    <string name="setting_voice_detail">其他声音：首页刷新音、摇一摇声音等</string>
    <string name="setting_sys">系统设置</string>
    <string name="setting_sys_picdownload">2G/3G网络下载图片</string>
    <string name="setting_sys_picdownload_detail">关闭图片下载，微博列表无图模式</string>
    <string name="setting_sys_cacheclear">清除缓存</string>
    <string name="setting_sys_update">软件更新</string>
    <string name="setting_inform">通知和提醒</string>
    <string name="setting_inform_info">通知</string>
    <string name="setting_inform_atme">\@我的</string>
    <string name="setting_inform_comment">评论</string>
    <string name="setting_inform_newfan">新粉丝</string>
    <string name="setting_inform_good">赞</string>
    <string name="setting_inform_secretmsg">私信</string>
    <string name="setting_inform_friendblog">好友圈微博</string>
    <string name="setting_inform_carefocus">特别关注</string>
    <string name="setting_inform_hotpush">微博热点推送</string>
    <string name="setting_inform_timeset">免打扰</string>
    <string name="setting_inform_gainnews">获取新消息</string>
    <string name="setting_inform_icare">我关注的人</string>
    <string name="setting_private">隐私设置</string>
    <string name="setting_private_contact">通讯录</string>
    <string name="setting_private_con_allowed">推荐通讯录好友</string>
    <string name="setting_private_phone_allowed">通过手机搜到我</string>
    <string name="setting_private_phone_allowed_detail">关闭后，通讯录好友将不能通过通讯录找到你</string>
    <string name="setting_private_comment_who">哪些人可以评论我的微博</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_self_center">SelfCenter</string>
    <string name="title_activity_voice_reminder">VoiceReminder</string>
    <string name="title_activity_inform_setting">InformSetting</string>
    <string name="title_activity_privatesafe_setting">PrivateSetting</string>
    <string name="title_activity_private_setting">PrivateSetting</string>
    <string name="title_activity_accountsafe">AccountSafe</string>
    <string name="title_activity_editpassword">EditPassword</string>
    <string name="title_activity_aboutsoft">Aboutsoft</string>
    <string name="title_activity_informselecteditems">InformSelectedItems</string>
    <string name="title_activity_informtimeset">InformtimeSet</string>
    <string name="menu_finding_hint">大家都在搜:</string>
    <string name="menu_finding_hottopic">热门话题</string>
    <string name="menu_finding_findpeople">找人</string>
    <string name="menu_finding_findpeople_detail">找到你可能感兴趣的人</string>
    <string name="menu_finding_hotblog">找微博</string>
    <string name="menu_finding_app">应用</string>
    <string name="menu_finding_addcare">+关注</string>

    <!-- 设置-隐私与安全 -->
    <string name="setting_safe_topname">隐私和安全</string>
    <string name="setting_safe_privaty">隐私设置</string>
    <string name="setting_safe_accounts">账号安全</string>
    <string name="setting_safe_privateletter">已屏蔽私信的人</string>
    <string name="setting_safe_microblog">已屏蔽微博的人</string>
    <string name="setting_safe_blacklist">黑名单</string>

    <!-- 设置-隐私与安全-账号安全 -->
    <string name="setting_accounts_topname">账号安全</string>
    <string name="safe_accounts_pstrength">密码强度</string>
    <string name="safe_accounts_loginprotected">登录保护</string>
    <string name="safe_accounts_binding">邮箱绑定</string>
    <string name="setting_editpassword_topname">修改密碼</string>
    <string name="setting_editpassword_currentpassword">输入当前密码</string>
    <string name="setting_editpassword_newpassword">输入新密码</string>
    <string name="setting_editpassword_newpassword2">确认密码</string>
    <string name="setting_editpassword_btn_ok">确认修改</string>

    <!-- 关于软件 -->
    <string name="setting_aboutsoft_topname">关于软件</string>
    <!-- settings -->

    <string name="tishi"> 可输入140字</string>
    <string name="fabu">发 布</string>
    <string name="shouye">首页</string>
    <string name="faweibo">发微博</string>
    <string name="message">消息</string>
    <string name="shuaxin">刷新</string>
    <string name="more">更多</string>
    <string name="self_center_details_topname">详细资料</string>
    <string name="self_center_details_usernametxt">昵称：</string>
    <string name="self_center_details_sextxt">性别：</string>
    <string name="self_center_details_countrytxt">国家：</string>
    <string name="self_center_details_areatxt">地区：</string>
    <string name="self_center_details_labeltxt">标签：</string>
    <string name="self_center_details_introductiontxt">简介：</string>
    <!-- 个人中心   收藏  &赞 -->
    <string name="self_center_collection_topname">我最近的收藏</string>
    <string name="self_center_goodblog_topname">我赞过的微博</string>

    <!-- 个人中心   我的名片 -->
    <string name="self_center_card_topname">我的名片</string>
    <string name="self_center_card_instructions">扫描上面的二维码    关注我吧</string>
    <!-- 我的相册 -->
    <string name="self_center_photoset">我的相册</string>
    <string name="self_center_headset">我的头像</string>
    <string name="title_activity_inform_msg">InformMsg</string>
    
    <string name="soft_update_check">检测软件更新</string>
    <string name="soft_update_no">这是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到最新版本，立即更新么？</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后再说</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消更新</string>

</resources>