<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6" >

    <ImageView
        android:id="@+id/setting_editpassword_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/setting_safe_topbar" />

    <Button
        android:id="@+id/setting_editpassword_btn_backup"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_margin="3dip"
        android:background="@drawable/setting_safe_backup" />

    <TextView
        android:id="@+id/setting_editpassword_topname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/setting_editpassword_btn_backup"
        android:layout_alignBottom="@+id/setting_editpassword_btn_backup"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_editpassword_topname"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setting_editpassword_btn_tomenu"
        android:layout_width="35dip"
        android:layout_height="35dip"
        android:layout_alignBottom="@+id/setting_editpassword_btn_backup"
        android:layout_alignParentRight="true"
        android:layout_margin="5dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/setting_safe_tomenu" />
  

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/setting_editpassword_topbar"
        android:layout_margin="8dip"
        android:background="#ffffff"
        android:orientation="vertical" >
<View
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:background="#e6e6e6" />
        <TextView
            android:id="@+id/setting_editpassword_currentaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"            
            android:text="当前账号： kong……@sina.cn"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:background="#e6e6e6" />
        <EditText 
	    	android:id="@+id/setting_editpassword_currentpassword"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="10dp"  
	    	android:password="true"
	    	android:hint="@string/setting_editpassword_currentpassword"
	    	android:singleLine="true"
	    	android:inputType="textPassword" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:background="#e6e6e6" />
        <EditText 
	    	android:id="@+id/setting_editpassword_newpassword"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="10dp"  
	    	android:password="true"
	    	android:hint="@string/setting_editpassword_newpassword"
	    	android:singleLine="true"
	    	android:inputType="textPassword" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:background="#e6e6e6" />
        <EditText 
	    	android:id="@+id/setting_editpassword_newpassword2"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="10dp"  
	    	android:password="true"
	    	android:hint="@string/setting_editpassword_newpassword2"
	    	android:singleLine="true"
	    	android:inputType="textPassword" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e6e6e6" />
    </LinearLayout>
    <View
            android:id="@+id/setting_editpassword_bottombar"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_alignParentBottom="true"
            android:background="#e6e6e6" />
    <Button
            android:id="@+id/setting_editpassword_btn_ok"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_above="@id/setting_editpassword_bottombar"
            android:layout_margin="10dip"
            android:background="@drawable/btn_redbar"
            android:text="@string/setting_editpassword_btn_ok"
            android:textColor="#ffffff"/>   
</RelativeLayout>